--- a/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -13,7 +13,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            font-family: 'Poppins', sans-serif, sans-serif;
+            font-family: 'Yeezy', 'Poppins', sans-serif;
         }
 
         .admin-dashboard-body {
