--- a/MusicPlatform/Views/Track/Details.cshtml
+++ b/MusicPlatform/Views/Track/Details.cshtml
@@ -388,6 +388,7 @@
 
             <div id="play-track-button"
                  class="play-button-overlay"
+                 data-track-id="@Model.PublicId"
                  data-src="@Model.AudioUrl"
                  data-title="@Model.Title"
                  data-artist="@Model.ArtistName"
