--- a/MusicPlatform/Views/Track/Add.cshtml
+++ b/MusicPlatform/Views/Track/Add.cshtml
@@ -5,6 +5,9 @@
     Layout = "_Layout";
 }
 
+<link rel="stylesheet" href="https://unpkg.com/filepond/dist/filepond.css">
+<link rel="stylesheet" href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css">
+
 <!-- Custom CSS for the Upload Page -->
 <style>
     .upload-page-container {
